# mittelvec

./: .gitignore  CMakeLists.txt  Makefile  TestSingleHeader.cpp  build-steps.md  generate_single_header.py
include/: AudioBuffer.h  AudioContext.h  AudioGraph.h  AudioNode.h  Engine.h  Envelope.h  Filter.h  Gain.h  MusicCueOrchestrator.h  NoiseGenerator.h  PitchShift.h  PolyphonicSampler.h  SamplePack.h  Sampler.h
src/: AudioBuffer.cpp  AudioGraph.cpp  Engine.cpp  Envelope.cpp  Filter.cpp  Gain.cpp  MusicCueOrchestrator.cpp  NoiseGenerator.cpp  PitchShift.cpp  PolyphonicSampler.cpp  SamplePack.cpp  Sampler.cpp  main.cpp
